<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.paysky.ui.fragment.smspayment.SmsPaymentFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/enter_pin_code"
        android:textColor="#2d3134" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent"
            android:background="@color/accentColor" />

        <EditText
            android:id="@+id/pin_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/pin"
            android:inputType="numberPassword"
            android:paddingLeft="8dp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/resend_sms"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/sending_sms_layout"
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/sms_received_within"
            android:textColor="#2d3134" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_circle_progress"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/seconds_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#292E2E"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:text="29" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seconds"
                android:textColor="#292E2E"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/proceed_button"
        style="@style/buttonStyle"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/baybutton_proceed_button"
        android:text="@string/proceed" />
</LinearLayout>
