<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="io.paysky.ui.fragment.qr.QrCodePaymentFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp">

        <LinearLayout
            android:id="@+id/card_payment_layout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/payment_option_unselected"
            android:button="@null"
            android:checked="true"
            android:drawableStart="@drawable/ic_card"
            android:gravity="center">

            <TextView
                android:id="@+id/card_payment_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_card_black"
                android:gravity="center_vertical"
                android:text="@string/card"
                android:textColor="#2D3134" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wallet_payment_layout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/payment_option_selected"
            android:button="@null"
            android:checked="true"
            android:drawableStart="@drawable/ic_card"
            android:gravity="center">

            <TextView
                android:id="@+id/wallet_payment_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_wallet_white"
                android:gravity="center_vertical"
                android:text="@string/wallet"
                android:textColor="#FFF" />

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:text="@string/open_wallet_app"
        android:textColor="#2d3134"
        android:textSize="@dimen/_12sdp" />


    <ImageView
        android:id="@+id/qr_imageView"
        android:layout_width="@dimen/_178sdp"
        android:layout_height="@dimen/_167sdp"
        android:layout_gravity="center"
        android:scaleType="fitXY" />


    <LinearLayout
        android:id="@+id/or_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#C7C8C8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/or"
            android:textColor="#C7C8C8"
            android:textSize="@dimen/_16sdp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#C7C8C8" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/request_payment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/request_payment_layout_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:text="@string/cant_scan_code"
            android:textColor="#2d3134"
            android:textSize="@dimen/_11sdp" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1">

            <Button
                android:id="@+id/request_payment"
                style="@style/buttonStyle"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_31sdp"
                android:background="@drawable/baybutton_proceed_button"
                android:text="@string/request_payment"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/sms_payment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textColor="#2d3134" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp">

            <View
                android:layout_width="@dimen/_12sdp"
                android:layout_height="match_parent"
                android:background="@color/accentColor" />

            <EditText
                android:id="@+id/mobile_number_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_drawable"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:paddingStart="@dimen/_4sdp" />
        </LinearLayout>

        <Button
            android:id="@+id/send_otp_button"
            style="@style/buttonStyle"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/baybutton_proceed_button"
            android:text="@string/send_otp" />
    </LinearLayout>

</LinearLayout>
