<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.paysky.ui.fragment.paymentsuccess.PaymentApprovedFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_payment_approved" />

    <TextView
        android:id="@+id/approved_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="approved" />

    <TableRow
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auth_number"
            android:gravity="center"
            android:textColor="#282C2E" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trx_id"
            android:gravity="center"
            android:textColor="#282C2E" />
    </TableRow>


    <TableRow
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/auth_number_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/auth_number"
            android:gravity="center"
            android:textColor="#282C2E" />

        <TextView
            android:id="@+id/trx_id_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/trx_id"
            android:gravity="center"
            android:textColor="#282C2E" />
    </TableRow>

    <TableRow
        android:id="@+id/close_print_layout"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_14sdp">

        <Button
            android:id="@+id/close_button"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/close" />

        <Button
            android:id="@+id/send_receipt_button"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/baybutton_proceed_button"
            android:text="@string/send_receipt" />
    </TableRow>

    <LinearLayout
        android:id="@+id/send_email_notification"
        android:orientation="vertical">

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#C7C8C8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/send_notification"
            android:textColor="#282C2E" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/send_email_layout"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/rectengle_drawable">

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_8sdp" />

        <Button
            android:id="@+id/send_email_button"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_rect_green"
            android:baselineAligned="false"
            android:text="@string/send"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sent_email_success_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/mail_sent_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#00BFA5"
            tools:text="ahmed"
            android:gravity="center" />

        <Button
            android:id="@+id/close_view_button"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/baybutton_proceed_button"
            android:text="@string/close" />
    </LinearLayout>
</TableLayout>
